--- a/index.html
+++ b/index.html
@@ -3,149 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WV</title>
-    <link rel="stylesheet" href="sty.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>FORM</title>
 </head>
 <body>
-    <div class="head">
-    <div class="wv">
-       <h4><a class="ghhhhhhhh" href="index.html">WV</a></h4>
-    </div>
-    <div class="tut">
-        <h4><a class="jgg565ghh" href="Tutorial.html">Tutorials<i class="fa-solid fa-down-long"></i></a></h4>
-    </div>
-    <div class="ser">
-        <h4>Services</h4>
-        <i class="fa-solid fa-down-long"></i>
-    </div>
-    <div class="sear">
-        <input class="tex" type="text" placeholder="Search">
-        <h1 class="mag"><i class="fa-solid fa-magnifying-glass"></i></h1>
-    </div>
-    <div class="sign">
-        <pre><h4 class="up">SignUp </h4></pre>
-        <pre><h4 class="Up">Login</h4></pre>
-    </div>
-    </div>
-    <br/>
-    <hr>
-
-
-
-    <div class="box2">
-        <div class="htm">
-            <h4>HTML</h4>
-        </div>
-        <div class="cs">
-            <h4>CSS</h4>
-        </div>
-        <div class="js">
-            <h4>Java Script</h4>
-        </div>
-        <div class="cp">
-            <h4>C</h4>
-        </div>
-        <div class="cl">
-            <h4>C++</h4>
-        </div>
-        <div class="jk">
-            <h4>C#</h4>
-        </div>
-        <div class="sq">
-            <h4>SQL</h4>
-        </div>
-        <div class="pt">
-            <h4>Python</h4>
-        </div>
-    </div>
-    <hr>
-
-
-
-    <div class="box3">
-        <div class="co">
-            <h1 class="tcfg">Learn To Coding</h1>
-        </div>
-        <div class="sighj">
-            <h1>with the world largest coding site</h1>
-        </div>
-    </div>
-    <br/>
-    <hr>
-
-
-
-    <div class="BOX3">
-        <div class="aa656565ggugugg">
-        <h1 class="kjhkhih566hhjhj">HTML</h1>
-        <h4 class="jhhihi556565hjjhhgghg">Hyper Text Markup Language</h4></div>
-        <h4 class="yuyuyyuyu5"><a href="html.html">Learn HTML</a></h4>
-    </div>
-    </div>
-    <br/>
-    <hr>
-
-
-
-    <div class="box4">
-        <div class="chjk">
-            <h1 class="hjggjguguut">C Programming</h1></div>
-            <h4 class="hghjgjjg"><a href="box4.html">Learn C</h4></a>
-        </div>
-    </div>
-    <br/>
-    <hr>
-
-
-
-    <div class="header">
-        <div class="Header">
-        <h4>Best Tutorials</h4>
-        <h4>Best Examples</h4>
-        <h4>Best Questions</h4>
-    </div>
-    <br/>
-    <div class="jkgugyityutytky">
-        <h4>HTML Tutorials</h4>
-        <h4>HTML Example</h4>
-        <h4>HTML Question</h4>
-    </div>
-    <div class="guuiyuoyoyyy">
-        <h4>CSS Tutorials</h4>
-        <h4>CSS Example</h4>
-        <h4>CSS Question</h4>
-    </div>
-    <div class="hjyuyuyyyoyytoy">
-        <h4>Java Script Tutorials</h4>
-        <h4>Java Script Example</h4>
-        <h4>Java Script Question</h4>
-    </div>
-    <div class="hyuiyuyyiyiyiyy8">
-        <h4>C Tutorials</h4>
-        <h4>C Example</h4>
-        <h4>C Question</h4>      
-    </div>
-    <div class="jgysilyuyyo">
-        <h4>C++ Tutorials</h4>
-        <h4>C++ Example</h4>
-        <h4>C++ Question</h4> 
-    </div>
-    <div class="jiuoiuuiuu90ui">
-        <h4>C# Tutorials</h4>
-        <h4>C# Example</h4>
-        <h4>C# Question</h4>
-    </div>
-    <div class="jkjhuyiu4464536">
-        <h4>SQL Tutorials</h4>
-        <h4>SQL Example</h4>
-        <h4>SQL Question</h4>
-    </div>
-    <div class="jhuyuyyyiu658535987">
-        <h4>Python Tutorials</h4>
-        <h4>Python Example</h4>
-        <h4>Python Question</h4>
-    </div>
-    </div>
+    <h1 style="text-shadow:2px 2px 5px aqua"><center>Sudent Information Form</center></h1>
+    <form action="/action_page.php">
+    <fieldset>
+        <legend>Name Information: </legend>
+        <label for="fname">First Name: </label><br>
+        <input type="text" id="fname" required>
+        <br>
+        <br>
+        <label for="lname">Last Name: </label><br>
+        <input type="text" id="lname">
+    </fieldset>
+    <br>
+    <br>
+    <br>
+    <fieldset>
+        <legend>Select Language: </legend>
+        <input type="checkbox" id="lang" name="fav_language" value="HTML">
+        <label for="lang">HTML</label>
+        <br>
+        <input type="checkbox" id="lang" name="fav_language" value="css">
+        <label for="lang">CSS</label>
+        <br>
+        <input type="checkbox" id="lang" name="fav_language" value="JS">
+        <label for="lang">JAVA SCRIPT</label>
+    </fieldset>
+    <br>
+    <br>
+    <br>
+    <fieldset>
+        <legend>Branch: </legend>
+    <input type="radio" id="branch" name="fav_branch" value="BTECH">
+    <label for="branch">B.Tech(C.S.E)</label>
+    <br>
+    <input type="radio" id="branch" name="fav_branch" value="BTECH">
+    <label for="branch">B.Tech(E.C.E)</label>
+    <br>
+    <input type="radio" id="branch" name="fav_branch" value="BTECH">
+    <label for="branch">B.Tech(M.E)</label>
+    <br>
+    <input type="radio" id="branch" name="fav_branch" value="BTECH">
+    <label for="branch">B.Tech(E.E)</label>
+    </fieldset>
+    <br>
+    <br>
+    <br>
+    <fieldset>
+    <legend>State: </legend>
+    <select>
+        <option value="state">Bihar</option>
+        <option value="state">Delhi</option>
+        <option value="state">Assam</option>
+        <option value="state" selected>Haryana</option>
+        <option value="state">West Bengal</option>
+    </select>
+</fieldset>
+<br>
+<br>
+<br>
+<fieldset>
+    <legend>Other Information: </legend>
+    <label>Email Id: </label>
+    <input type="email" id="email" name="id"><br><br>
+    <label>Select Date: </label>
+    <input type="date" id="date" name="id">
+</fieldset>
+<br>
+<br>
+<br>
+<fieldset>
+    <legend>Feedback: </legend>
+    <textarea name="feedback" placeholder="Please Give Your Valuable Feedback" rows="4"></textarea>
+</fieldset>
+<br>
+<button type="button" onclick="alert('Check Information!')">Submit</button>
+    </form>
 </body>
 </html>
